--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "@apollo/server": "^5.4.0",
     "@as-integrations/fastify": "^3.1.0",
     "@nestjs/apollo": "^13.2.4",
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.2.4",
     "@nestjs/platform-fastify": "^11.1.14",
+    "@nestjs/terminus": "^11.1.0",
+    "@prisma/client": "^6.19.2",
+    "axios": "^1.13.5",
     "graphql": "^16.12.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
@@ -47,6 +51,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
+    "prisma": "^6.19.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
