--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "@nestjs/apollo": "^13.2.4",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.2.4",
     "@nestjs/platform-fastify": "^11.1.14",
     "@nestjs/terminus": "^11.1.0",
     "@prisma/client": "^6.19.2",
+    "@prisma/extension-read-replicas": "^0.5.0",
     "axios": "^1.13.5",
     "graphql": "^16.12.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
