--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/cqrs": "^11.0.3",
     "@nestjs/graphql": "^13.2.4",
     "@nestjs/platform-fastify": "^11.1.14",
     "@nestjs/terminus": "^11.1.0",
@@ -40,6 +41,7 @@
     "@prisma/client": "^6.19.2",
     "@prisma/extension-read-replicas": "^0.5.0",
     "axios": "^1.13.5",
+    "dataloader": "^2.2.3",
     "graphql": "^16.12.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
